[package]
name = "PostPyro"
version = "1.0.0"
edition = "2021"
description = "Ultra-fast PostgreSQL driver for Python built with Rust - Binary protocol, prepared statements, thread-safe,tokio-postgres"
authors = ["Magi sharma J <sharmamagi0@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/magi8101/PostPyro"
repository = "https://github.com/magi8101/PostPyro"
keywords = ["postgresql", "database", "python", "pyo3", "async"]
categories = ["database", "api-bindings"]

[lib]
name = "PostPyro"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
postgres-types = { version = "0.2", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = { version = "0.10", features = ["rt_tokio_1"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
hex = "0.4"

# High-performance optimization crates
smallvec = { version = "1.13", features = ["const_generics", "write", "union"] }
lru = "0.12"
compact_str = { version = "0.7", features = ["serde"] }
parking_lot = "0.12"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
inherits = "release"
debug = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
strip = false
debug = true